<resources>
    <string name="app_name">Send It</string>
    <string name="title_activity_login">"Login "</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="about_message_1"> This application is very benefical for sending leave or
        event or other application online to your teacher's email.</string>
    <string name="about_message_2">Just create accout with your appropriate college data, then login it with username and password,
        and select-fill-submit your application </string>
    <string name="about_message_3">For more details visit : http://matrix-host.000webhostapp.com/sendit</string>
    <string name="about_message_4">Glad to Help You...</string>
    <string name="about_message_5">Team Send-It</string>
</resources>
