<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/about_message_1"
            android:id="@+id/about_1"
            android:textSize="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/about_1"
            android:text="@string/about_message_2"
            android:id="@+id/about_2"
            android:textSize="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/about_2"
            android:text="@string/about_message_3"
            android:id="@+id/about_3"
            android:textSize="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/about_3"
            android:text="@string/about_message_4"
            android:id="@+id/about_4"
            android:textSize="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_below="@+id/about_4"
            android:text="@string/about_message_5"
            android:id="@+id/about_5"
            android:textSize="16dp"
            />

    </RelativeLayout>

</ScrollView>